--- a/client/view/main.html
+++ b/client/view/main.html
@@ -46,7 +46,7 @@ function write_message()
 
 function trans(){
 	var res = $.selection();
-	alert(res)
+	window.open('https://translate.google.co.jp/?hl=ja#view=home&op=translate&sl=en&tl=ja&text='+res, null, 'top=100,left=100,width=800,height=800');
 }
 
 function transPage()
